--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,10 +17,12 @@ repos:
     hooks:
       - id: flake8
         args:
-          - --max-line-length=300
+          - --max-line-length=400
   - repo: https://github.com/PyCQA/pylint
     rev: v3.0.0a6
     hooks:
       - id: pylint
         args:
-          - --max-line-length=300
+          - --max-line-length=400
+          - --errors-only
+          - --disable=C,R,E0401
