changing workload vars e2e scripts uses relative path in many places, so calling the script from different dir would fail, for ex env: ‘../../utils/index.sh’: No such file or directory error: the path "obo-route.yml" does not exist

--- a/rosa-burner.ini
+++ b/rosa-burner.ini
@@ -11,7 +11,7 @@ watcher_delay = 60
 enable_workload = False
 workload = cluster-density-ms
 workload_repo = "https://github.com/cloud-bulldozer/e2e-benchmarking.git"
-workload_script = "workloads/kube-burner-ocp-wrapper/run.sh"
+workload_script_path = "workloads/kube-burner-ocp-wrapper"
 worload_duration = 1h
 workload_jobs = 9
 
