--- a/rosa-burner.ini
+++ b/rosa-burner.ini
@@ -1,7 +1,7 @@
 [Defaults]
 install_clusters = True
 cluster_count = 1
-cluster_name_seed = gitci
+cluster_name_seed = rbur
 workers = 3
 workers_wait_time = 60
 wait_for_workers = True
