Add terraform subplatform on rosa platform

--- a/rosa-burner.ini
+++ b/rosa-burner.ini
@@ -45,6 +45,9 @@ common_operator_roles =
 #extra_machinepool_taints =
 
 
+[Platform:Rosa:Terraform]
+terraform_retry = 5
+
 [Platform:Rosa:Hypershift]
 create_vpcs = True
 clusters_per_vpc = 2
