Add azure as platform and hypershift as subplatform

--- a/hcp-burner.ini
+++ b/hcp-burner.ini
@@ -10,9 +10,12 @@ batch_size = 1
 watcher_delay = 60
 
 enable_workload = False
+workload_script = run.sh
 workload = cluster-density-ms
-workload_repo = "https://github.com/cloud-bulldozer/e2e-benchmarking.git"
-workload_script_path = "workloads/kube-burner-ocp-wrapper"
+workload_repo = https://github.com/cloud-bulldozer/e2e-benchmarking.git
+workload_script_path = workloads/kube-burner-ocp-wrapper
+
+
 worload_duration = 1h
 workload_jobs = 9
 
@@ -52,3 +55,7 @@ terraform_retry = 5
 create_vpcs = True
 clusters_per_vpc = 2
 terraform_retry = 5
+
+[Platform:Azure]
+
+[Platform:Azure:Hypershiftci]
